# paras

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
